   - sessionhandlers -> sessionhandler
   - timezones -> timezone
   - usergroups -> usergroup
 ^ Changed system debug fields to show new field group capabilities.
 ^ Updated plugin XML files from <params> to <fields>
 ^ Added access controls to com_plugins and refactored MVC.
 # Fixed bug in JFormFieldList adding double [] to multiple select lists.
 ^ Added JTableExtension::publish override.

12-Nov-2009 Andrew Eddie
 # Fix missing language strings in permissions widget.
 ^ Update MVC for com_redirect.
 ^ Change com_content article view to throw a hard 404 if an article not found (or not published).

11-Nov-2009 Mark Dexter
# Fix bug showing current value of request parameters in menu items

11-Nov-2009 Elin Waring
# Fix up comments and URL issues in com_weblinks

10-Nov-2009 Elin Waring
# Miscellaneous cleanup in weblinks, newsfeed, content, language strings
# Tidy up com_menus, delete beez and khepri ini files

10-Nov-2009 Mark Dexter
# Minor HTML validation issue in mod_login

05-Nov-2009 Ron Severdia
^ Template Manager UI cleanup, new images
# Module Manager image fix

05-Nov-2009 Andrew Eddie
 ^ NOTE. Backward incompatible change in the argument list for JEditor::display
 + Added new argument in JEditor::display to take an optional 'id' for the field element (inserted before $params).
 # Corrected bugs in CodeMirror plugin caused by array-based naming of JForm fields (hence addition of id arguments above).
 ! Completed source editing in com_templates.
 # Fixed php notice when editing an article.
 # Fixed some strangeness in the menu edit page with respect to the request variables.
 ^ Refactor backend com_search to MVC; fix search plugins.

04-Nov-2009 Andrew Eddie
 # Fix bugs in list pagination (stepping to page 2+).

03-Nov-2009 Andrew Eddie
 ^ Change dtd of template install files to 1.6.
 ^ Add client columns to template style and templates list; adjust client filters to be able to display all templates.